browser/css/jsdialogs.css
/* ... */
.ui-treeview tr[aria-level='5'] > td:first-child {
	padding-left: 10ch;
}

.ui-treeview tr > td:first-child .ui-treeview-expander {
	display: inline-block;
	vertical-align: top;
}

.ui-treeview tr[aria-level]:not([aria-expanded]) > td:first-child::before {
	font-family: monospace;
	content: 'V';
	color: transparent;
	display: inline-block;
	margin-inline-end: 7px;
	vertical-align: top;
}

/* context menu */
.context-menu-list {
	background: var(--color-background-lighter);
	border: 1px solid var(--color-border-dark);
	border-radius: var(--border-radius);
	-webkit-box-shadow: 0 0 3px var(--color-box-shadow);
	box-shadow: 0 0 3px var(--color-box-shadow);
}
.context-menu-item {
	color: var(--color-main-text);
	background-color: transparent;
}
.context-menu-separator {
	border-bottom: 1px solid var(--color-border-lighter);
}

.context-menu-item.context-menu-disabled {
	color: var(--color-text-lighter);
	background-color: var(--color-background-lighter);
}
/* input text */

.jsdialog.ui-edit, #hyperlink-text-box:not(.mobile-wizard) {
	color: var(--color-text-dark);
	background-color: var(--color-background-dark);
	line-height: 28px;
	max-height: 32px;
	width: auto;
	width: -webkit-fill-available;
	width: -moz-available;
	border: 1px solid var(--color-border-dark);
	border-radius: var(--border-radius);
	overflow: hidden;
	align-self: center;
	padding-inline: 4px;
}

#search_edit.ui-edit.autofilter {
	width: 100%;
	width: -moz-available;
	width: -webkit-fill-available;
	width: fill-available;
	margin-top: 8px;
	border-radius: 0;
	border-left: none;
	border-right: none;
}
/* checkbox */

.jsdialog.checkbutton {
	white-space: nowrap;
}

.jsdialog.checkbutton input,
.jsdialog.checkbutton label {
	vertical-align: middle;
	font-size: var(--default-font-size);
}

.jsdialog.checkbutton label {
	padding: 0px 2px;
	line-height: 28px;
	color: var(--color-main-text);
}
/* Radio button */

.radiobutton.jsdialog {
	display: flex;
	align-items: center;
	justify-content: flex-start;
}

.jsdialog input[type='radio'],
.jsdialog input[type='color-preview'] {
	margin: 1px 8px;
	border: none;
	height: 18px;
	width: 20px;
}

.jsdialog .radiobutton > label {
	vertical-align: middle;
}

.jsdialog input[type='radio'][disabled='disabled'] ~ label {
	color: var(--color-text-lighter);
}

/* text label */

.ui-dialog-content .jsdialog.ui-text {
	padding-inline-start: 0;
	margin: auto 5px;
}

.jsdialog.ui-text {
	padding-inline-start: 8px;
}

/* spinfield */

.spinfieldcontainer {
	margin-inline-end: 5px;
	min-width: 70px;
	width: 100%;
}

.spinfieldcontainer input {
	border: 1px solid var(--color-border-dark);
	border-radius: var(--border-radius);
	background: var(--color-background-dark);
	color: var(--color-text-dark);
}

.spinfieldcontainer input:not([disabled]):hover {
	border: 1px solid var(--color-border-darker);
	color: var(--color-text-darker);
	background-color: var(--color-background-lighter);
}

.jsdialog.spinfieldcontainer[disabled] input {
	border: 1px solid var(--color-border-lighter);
}

.spinfield {
	padding: 4px 0 4px 4px;
	height: 28px;
	box-sizing: border-box;
	margin-right: 1px;
	min-width: 70px;
	width: 100%;
}

.spinfieldunit {
	font-size: var(--default-font-size);
	color: var(--color-text-dark);
	margin: 5px;
	margin-inline-start: calc(-50px);
}
/* spinfield (number) */
input[type='number'] {
	padding-top: 0 !important;
	padding-bottom: 0 !important;
}

input[type='number']::-webkit-inner-spin-button,
input[type='number']::-webkit-outer-spin-button {
	opacity: 0.5;
	height: 28px;
	margin: 0;
}

input[type='number']:hover::-webkit-inner-spin-button,
input[type='number']:hover::-webkit-outer-spin-button {
	opacity: 1;
	cursor: pointer;
}
/* listbox */
.ui-listbox-container,
.ui-combobox {
	display: flex;
	margin: auto 0;
}

.ui-listbox {
	padding: 0 14px 0 4px;
	border: 1px solid var(--color-border-dark);
}

.ui-listbox,
.ui-combobox,
.ui-timefield  {
	box-sizing: border-box;
	-webkit-appearance: none;
	-moz-appearance: none;
	appearance: none;
	min-width: 100px;
	width: 100%;
	height: 28px;
	line-height: normal;
	font-size: var(--default-font-size);
	font-family: var(--jquery-ui-font);
	border-radius: var(--border-radius);
	background-color: var(--color-background-dark);
	color: var(--color-text-dark);
}

.jsdialog-window .ui-listbox,
.jsdialog-window .ui-combobox,
.jsdialog-window .ui-timefield {
	height: 32px;/* Use the same height as in .jsdialog.ui-edit */
}

.ui-listbox option {
	font-weight: normal;
	display: block;
	white-space: nowrap;
	min-height: 1.2em;
	padding: 0 5px;
}

.ui-listbox::-ms-expand {
	display: none;
}

.ui-listbox-arrow {
	content: '';
	background: url('images/jquery-ui-lightness/ui-icons_222222_256x240.png') no-repeat transparent;
	background-position: -67px -18px !important;
	display: inline-block;
	position: relative;
	width: 11px;
	height: 11px;
	cursor: pointer;
	pointer-events: none;
	margin-block-start: 8px;
	margin-inline-start: -16px;
	margin-inline-end: 4px;
}

[data-theme='dark'] .ui-listbox-arrow {
	background: url('images/jquery-ui-lightness/ui-icons_ffffff_256x240.png') no-repeat transparent;
}

.ui-listbox[disabled='disabled'] ~ .ui-listbox-arrow,
.ui-combobox[disabled='disabled'] ~ .ui-listbox-arrow {
	opacity: 0.5;
	cursor: auto;
}

/* ui-combobox */
.ui-combobox,
.ui-timefield {
	border: 1px solid var(--color-border);
}

.ui-combobox-content {
	width: 100%;
	border: none;
	border-start-start-radius: var(--border-radius);
	border-end-start-radius: var(--border-radius);
	color: var(--color-text-dark);
	background-color: var(--color-background-lighter);
}

.ui-combobox-button {
	padding-left: 20px;
	border-left: 1px solid var(--color-border);
}

.ui-combobox-dropdown {
	position: absolute;
	z-index: 2001;
	padding: 0px;
	overflow-y: auto;
	max-height: 500px;
	background-color: var(--color-background-dark);
	border: 1px solid var(--color-border-dark);
	border-radius: var(--border-radius);
}
/* ... */

